# ZIN-api

./: Cargo.toml
src/: __main.rs  commitment.rs  common.rs  constraints.rs  main.rs
