[package]
name = "zin-api"
version = "0.0.1"
authors = [ "vinh tran" ]
description = "A SNARK api"
keywords = ["cryptography", "relations", "r1cs"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

ark-ff = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false, optional = true }

ark-r1cs-std = { version = "^0.3.0", optional = true, default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0" }

ark-crypto-primitives = { version = "^0.3.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes", "std" ] }
tracing-subscriber = { version = "0.2" }
derivative = { version = "2.0", features = ["use_core"] }
rand = "0.8.5"
hex = "0.4.3"
ark-ec = "0.3.0"
actix-cors = "0.6.4"

[features]
default = ["std", "r1cs"]
std = ["ark-ff/std", "ark-std/std", "ark-relations/std", "ark-crypto-primitives/std"]
r1cs = ["ark-relations", "ark-r1cs-std", "ark-crypto-primitives/r1cs"]

